--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sterling National Bank</title>
+    <title>al hila Bank</title>
     <script type="text/javascript">
-      window.sitename = "Sterling National Bank"
+      window.sitename = "al hila Bank"
     </script>
   </head>
   <body>
